--- a/assets/scss/layout/_team.scss
+++ b/assets/scss/layout/_team.scss
@@ -29,7 +29,7 @@
       line-height: 55px;
       border-radius: 50%;
       transform: translate(-50%, 44%);
-      background: var(--primary-color);
+      background: $primary-color;
     }
   }
 
