--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -25,7 +25,7 @@
   transition: 0.5s;
   border-radius: 7px;
   margin-bottom: 30px;
-  background: var(--light-color);
+  background: $light-color;
 
   > i {
     height: 55px;
@@ -38,7 +38,7 @@
     text-align: center;
     margin-right: 20px;
     border-radius: 50%;
-    background: var(--primary-color);
+    background: $primary-color;
   }
 }
 
@@ -56,7 +56,7 @@
 }
 
 .contact-info-item:hover {
-  background: var(--primary-color);
+  background: $primary-color;
 
   h3,
   span,
@@ -81,12 +81,12 @@
       font-size: 18px;
       font-weight: 600;
       text-transform: capitalize;
-      color: var(--heading-color);
-      font-family: var(--heading-font);
+      color: $heading-color;
+      font-family: $heading-font;
     }
 
     &:focus {
-      border-color: var(--primary-color);
+      border-color: $primary-color;
       background: transparent;
     }
   }
@@ -137,19 +137,19 @@
 
   .form-control {
     padding: 17px 30px;
-    background: var(--light-color);
-    border: 1px solid var(--light-color);
+    background: $light-color;
+    border: 1px solid $light-color;
 
     &::placeholder {
       font-size: 18px;
       font-weight: 600;
       text-transform: capitalize;
-      color: var(--heading-color);
-      font-family: var(--heading-font);
+      color: $heading-color;
+      font-family: $heading-font;
     }
 
     &:focus {
-      border-color: var(--primary-color);
+      border-color: $primary-color;
       background: transparent;
     }
   }
