--- a/assets/scss/layout/_menu.scss
+++ b/assets/scss/layout/_menu.scss
@@ -67,7 +67,7 @@
   position: relative;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 1px solid var(--border-color);
+  border-bottom: 1px solid $border-color;
 }
 
 .main-header .logo {
@@ -184,7 +184,7 @@
           left: 0;
           width: 0;
           transition: 0.5s;
-          background: var(--primary-color);
+          background: $primary-color;
         }
       }
 
@@ -215,7 +215,7 @@
   display: block;
   margin: 4px auto;
   border-radius: 2px;
-  background: var(--primary-color);
+  background: $primary-color;
 }
 
 .menu-right {
@@ -253,7 +253,7 @@
   line-height: 1;
   position: relative;
   padding-right: 30px;
-  border-right: 2px solid var(--border-color);
+  border-right: 2px solid $border-color;
 
   button {
     background: transparent;
@@ -266,7 +266,7 @@
     right: 0;
     z-index: 777;
     background-color: #fff;
-    border: 1px solid var(--border-color);
+    border: 1px solid $border-color;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
 
     input {
@@ -304,7 +304,7 @@
   }
 
   &.fixed-header .header-upper {
-    background: var(--primary-color);
+    background: $primary-color;
     box-shadow: 0px 0px 30px 0px rgb(0, 0, 0, 0.1);
   }
 
@@ -495,7 +495,7 @@
 
   .header-two {
     .header-upper {
-      background: var(--primary-color);
+      background: $primary-color;
       box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.1);
     }
 
