--- a/assets/scss/layout/_pricing.scss
+++ b/assets/scss/layout/_pricing.scss
@@ -25,7 +25,7 @@
   }
 
   .price-title {
-    color: var(--primary-color);
+    color: $primary-color;
     margin-bottom: 20px;
     transition: 0.5s;
   }
@@ -36,8 +36,8 @@
     transition: 0.5s;
     font-weight: 600;
     margin-bottom: 15px;
-    color: var(--heading-color);
-    font-family: var(--heading-font);
+    color: $heading-color;
+    font-family: $heading-font;
 
     &:before {
       content: '$';
@@ -57,8 +57,8 @@
     padding-bottom: 8px;
     margin-bottom: 25px;
     background: white;
-    color: var(--heading-color);
-    border: 1px solid var(--border-color);
+    color: $heading-color;
+    border: 1px solid $border-color;
   }
 
   .list-style-one li {
