Styling with hagoapps branding

--- a/assets/scss/base/_variables.scss
+++ b/assets/scss/base/_variables.scss
@@ -9,10 +9,10 @@
 
 // 🎨 Paleta de colores
 $base-color:        #5b5675;
-$heading-color:     #141125;
-$primary-color:     #5138ee;
+$heading-color:     #2b1a4e;
+$primary-color:     #45297b;
 $light-color:       #f8f7fc;
-$yellow-color:      #ffc800;
+$yellow-color:      #fecd25;
 $border-color:      #edebfd;
 
 // ✍️ Tipografías
