--- a/assets/scss/layout/_about.scss
+++ b/assets/scss/layout/_about.scss
@@ -22,7 +22,7 @@
       color: white;
       margin-top: 2px;
       line-height: 30px;
-      background: $primary-color;
+      background: $yellow-color;
     }
   }
 }
