--- a/assets/scss/layout/_contact.scss
+++ b/assets/scss/layout/_contact.scss
@@ -31,14 +31,14 @@
     height: 55px;
     width: 55px;
     flex: none;
-    color: white;
+    color: $primary-color;
     transition: 0.5s;
     border: 2px solid;
     line-height: 51px;
     text-align: center;
     margin-right: 20px;
     border-radius: 50%;
-    background: $primary-color;
+    background: $yellow-color;
   }
 }
 
