--- a/assets/scss/layout/_feedback.scss
+++ b/assets/scss/layout/_feedback.scss
@@ -173,7 +173,7 @@
   height: 13px;
   width: 13px;
   opacity: 0.2;
-  border: 3px solid white;
+  border: 3px solid $yellow-color;
 
   &.slick-active {
     opacity: 1;
