--- a/assets/scss/layout/_services.scss
+++ b/assets/scss/layout/_services.scss
@@ -114,7 +114,7 @@
     transition: 0.25s;
     border-radius: 7px;
     position: absolute;
-    background: $primary-color;
+    background: $yellow-color;
   }
 
   &:hover:after {
