--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -17,6 +17,8 @@
 @import 'base/common';
 @import 'base/mixins';
 
+@import 'components/buttons';
+
 /* Estructura general */
 @import 'layout/menu';
 @import 'layout/hero';
