--- a/assets/scss/layout/_dashboard.scss
+++ b/assets/scss/layout/_dashboard.scss
@@ -43,12 +43,12 @@
   }
 
   .slick-arrow {
-    color: white;
+    color: $primary-color;
     border: none;
     z-index: 1;
     position: absolute;
     top: calc(50% - 27px);
-    background: $heading-color;
+    background: $yellow-color;
 
     &:hover, &:focus {
       background: $primary-color;
