--- a/assets/scss/layout/_solutions.scss
+++ b/assets/scss/layout/_solutions.scss
@@ -75,7 +75,7 @@
     border-radius: 50%;
     margin-bottom: 25px;
     display: inline-block;
-    background: $primary-color;
+    background: $yellow-color;
   }
 
   h4 {
